external-crates/move/crates/move-package-alt/tests/data/edition_unknown_suffix/Move@parsed.snap
---
source: crates/move-package-alt/tests/test_runner.rs
---
error: unsupported edition '2024.final', expected one of '2024, 2024.beta, legacy'
  ┌─ tests/data/edition_unknown_suffix/Move.toml:3:11
  │
3 │ edition = "2024.final"
  │           ^^^^^^^^^^^^
